--- a/package.json
+++ b/package.json
@@ -2,20 +2,6 @@
   "name": "roofing-crm-api",
   "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "start": "node index.js"
-  },
-  "dependencies": {
-    "express": "^4.18.2"
-  }
-}{
-  "name": "roofing-crm-api",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "start": "node index.js"
-  },
-  "dependencies": {
-    "express": "^4.18.2"
-  }
+  "scripts": { "start": "node index.js" },
+  "dependencies": { "express": "^4.18.2" }
 }
